[project]
name = "ds-interview-questions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "itables>=2.2.4",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "optuna>=4.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
